# Colabie

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml  todo-issue.yaml
clientie/: Cargo.toml  glue.js
clientie/src/: lib.rs
clientie/web/: index.html  register.html
registrie/: Cargo.toml
registrie/examples/: quick_dev.rs
registrie/src/: db.rs  errors.rs  lib.rs  main.rs  utils.rs
registrie/tests/: quick_dev.rs
schemou/: Cargo.toml
schemou/schemou-macro/: Cargo.toml
schemou/schemou-macro/src/: derive.rs  lib.rs
schemou/src/: error.rs  impls.rs  lib.rs
schemou/src/legos/: mod.rs  short_id_str.rs
schemou/tests/: proc_macro.rs
xtasks/: Cargo.toml
xtasks/src/: clientie.rs  lib.rs  main.rs  registrie.rs  utils.rs
