[package]
name = "registrie"
version = "0.0.1-pr"
edition = "2021"

[dependencies]
schemou = { path = "../schemou" }
bitcode = { version = "0", features = ["derive"], default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
git2 = "0.20"
nanoserde = "0.1.37"
base64 = "0.22.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.10"
