[package]
name = "registrie"
version = "0.0.1-pr"
edition = "2021"

[dependencies]
schemou = { path = "../schemou" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
git2 = "0.20"
nanoserde = "0.1.37"
base64 = "0.22.1"

[dev-dependencies]
anyhow = "1"
rand = "0.9"
httpc-test = "0.1.10"
